# mpsc-queue-eval

./: CMakeLists.txt  README.md  main.cpp
benchmarks/: main_bench.cpp  old_bench.cpp
include/cas/: BasicAtomicQueue.hpp  BasicAtomicQueueAlignas.hpp  BasicAtomicQueueCompilerHints.hpp  VyukovStateMachine.hpp  VyukovStateMachineAlignas.hpp  VyukovStateMachineCompilerHints.hpp  VyukovStateMachinePeak.hpp
include/core/: QueueConcept.hpp
include/faa/: FaaTicketQueue.hpp  FaaTicketQueueAlignas.hpp  FaaTicketQueueCompilerHints.hpp
include/mutex/: BasicMutexQueue.hpp  BasicMutexQueueAlignas.hpp  BasicMutexQueueCompilerHints.hpp  SpinlockQueue.hpp  SpinlockQueueAlignas.hpp  SpinlockQueueCompilerHints.hpp
results/: BasicAtomicQueueAlignas_latencies.csv  BasicAtomicQueueCompilerHints_latencies.csv  BasicAtomicQueue_latencies.csv  BasicMutexQueueAlignas_latencies.csv  BasicMutexQueueCompilerHints_latencies.csv  BasicMutexQueue_latencies.csv  FaaTicketQueueAlignas_latencies.csv  FaaTicketQueueCompilerHints_latencies.csv  FaaTicketQueue_latencies.csv  SpinlockQueueAlignas_latencies.csv  SpinlockQueueCompilerHints_latencies.csv  SpinlockQueue_latencies.csv  VyukovStateMachineAlignas_latencies.csv  VyukovStateMachineCompilerHints_latencies.csv  VyukovStateMachine_latencies.csv  hw_counters.csv  throughput.json
results_baseline/: BasicAtomicQueueAlignas_latencies.csv  BasicAtomicQueueCompilerHints_latencies.csv  BasicAtomicQueue_latencies.csv  BasicMutexQueueAlignas_latencies.csv  BasicMutexQueueCompilerHints_latencies.csv  BasicMutexQueue_latencies.csv  FaaTicketQueueAlignas_latencies.csv  FaaTicketQueueCompilerHints_latencies.csv  FaaTicketQueue_latencies.csv  SpinlockQueueAlignas_latencies.csv  SpinlockQueueCompilerHints_latencies.csv  SpinlockQueue_latencies.csv  VyukovStateMachineAlignas_latencies.csv  VyukovStateMachineCompilerHints_latencies.csv  VyukovStateMachine_latencies.csv  hw_counters.csv  throughput.json
scripts/: plot_comparison.py  plot_results.py  run_benchmarks.sh
